Fix basicResults template

--- a/src/jestFixtures/cli/TEMPLATE_basicResults.hbs
+++ b/src/jestFixtures/cli/TEMPLATE_basicResults.hbs
@@ -59,7 +59,7 @@
             "spec": {
                 "name": "3/3_0.spec.js",
                 "relative": "cypress/integration/3/3_0.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/3/3_0.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/3/3_0.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -114,7 +114,7 @@
             "spec": {
                 "name": "2/2.4.spec.js",
                 "relative": "cypress/integration/2/2.4.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/2/2.4.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/2/2.4.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -169,7 +169,7 @@
             "spec": {
                 "name": "3/3.1.spec.js",
                 "relative": "cypress/integration/3/3.1.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/3/3.1.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/3/3.1.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -224,7 +224,7 @@
             "spec": {
                 "name": "3/3.2.spec.js",
                 "relative": "cypress/integration/3/3.2.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/3/3.2.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/3/3.2.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -279,7 +279,7 @@
             "spec": {
                 "name": "2/2.3.spec.js",
                 "relative": "cypress/integration/2/2.3.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/2/2.3.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/2/2.3.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -334,7 +334,7 @@
             "spec": {
                 "name": "2/2.2.spec.js",
                 "relative": "cypress/integration/2/2.2.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/2/2.2.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/2/2.2.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -389,7 +389,7 @@
             "spec": {
                 "name": "3/3.3.spec.js",
                 "relative": "cypress/integration/3/3.3.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/3/3.3.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/3/3.3.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -463,7 +463,7 @@
             "spec": {
                 "name": "1/1.1.spec.js",
                 "relative": "cypress/integration/1/1.1.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/1/1.1.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/1/1.1.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -518,7 +518,7 @@
             "spec": {
                 "name": "2/2.1.spec.js",
                 "relative": "cypress/integration/2/2.1.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/2/2.1.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/2/2.1.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
@@ -592,7 +592,7 @@
             "spec": {
                 "name": "1/1.2.spec.js",
                 "relative": "cypress/integration/1/1.2.spec.js",
-                "absolute": "C:/Software/CypressRunner/tests/cypress/integration/1/1.2.spec.js",
+                "absolute": "{{simpleReversedCwd}}/tests/cypress/integration/1/1.2.spec.js",
                 "specType": "integration"
             },
             "shouldUploadVideo": true
